// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reminders Job Integration Tests createConfirmationText sentReminder's appointment is used for family appointment 1`] = `"Thanks John! Jane's appointment with Test account on September 11th at 8:30am is confirmed."`;

exports[`Reminders Job Integration Tests createConfirmationText should use family appointment when family length > 1 1`] = `"Thanks John! Your family's appointments with Test account on September 11th are confirmed."`;

exports[`Reminders Job Integration Tests createConfirmationText should use getFamilyConfirmationText if isFamily is true 1`] = `"Thanks John! Jane's appointment with Test account on September 11th at 8:30am is confirmed."`;

exports[`Reminders Job Integration Tests createConfirmationText should use patientConfirmationText if isFamily is false 1`] = `"Thanks John! Your appointment with Test account on September 11th at 9:45am is confirmed."`;

exports[`Reminders Job Integration Tests organizeRemindersOutboxList should be unique by appointment 1`] = `
Array [
  Object {
    "appointment": Object {
      "id": 1,
    },
    "dependants": Array [],
    "patient": Object {
      "id": 2,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "email",
      "sms",
    ],
  },
  Object {
    "appointment": Object {
      "id": 2,
    },
    "dependants": Array [],
    "patient": Object {
      "id": 1,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "sms",
    ],
  },
]
`;

exports[`Reminders Job Integration Tests organizeRemindersOutboxList should be unique by appointment for dependants + PoC 1`] = `
Array [
  Object {
    "appointment": Object {
      "id": 1,
    },
    "dependants": Array [],
    "patient": Object {
      "id": 1,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "email",
    ],
  },
  Object {
    "appointment": Object {
      "id": 2,
    },
    "dependants": Array [
      Object {
        "appointment": Object {
          "id": 1,
        },
        "patient": Object {
          "id": 1,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
    ],
    "patient": Object {
      "id": 2,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "sms",
    ],
  },
]
`;

exports[`Reminders Job Integration Tests organizeRemindersOutboxList should be unique by appointment for dependants with PoC 1`] = `
Array [
  Object {
    "appointment": Object {
      "id": 1,
    },
    "dependants": Array [],
    "patient": Object {
      "id": 1,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "email",
    ],
  },
  Object {
    "dependants": Array [
      Object {
        "appointment": Object {
          "id": 1,
        },
        "patient": Object {
          "id": 1,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
    ],
    "patient": Object {
      "id": 2,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "sms",
    ],
  },
]
`;

exports[`Reminders Job Integration Tests organizeRemindersOutboxList should be unique by appointment for dependants with different PoCs per channel 1`] = `
Array [
  Object {
    "dependants": Array [
      Object {
        "appointment": Object {
          "id": 1,
        },
        "patient": Object {
          "id": 3,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
    ],
    "patient": Object {
      "id": 1,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "email",
    ],
  },
  Object {
    "dependants": Array [
      Object {
        "appointment": Object {
          "id": 1,
        },
        "patient": Object {
          "id": 3,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
    ],
    "patient": Object {
      "id": 2,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "sms",
    ],
  },
]
`;

exports[`Reminders Job Integration Tests organizeRemindersOutboxList should be unique by appointment with dependants 1`] = `
Array [
  Object {
    "dependants": Array [
      Object {
        "appointment": Object {
          "id": 1,
        },
        "patient": Object {
          "id": 3,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
      Object {
        "appointment": Object {
          "id": 2,
        },
        "patient": Object {
          "id": 4,
          "preferences": Object {
            "emailNotifications": true,
            "phone": true,
            "sms": true,
          },
        },
      },
    ],
    "patient": Object {
      "id": 2,
      "preferences": Object {
        "emailNotifications": true,
        "phone": true,
        "sms": true,
      },
    },
    "primaryTypes": Array [
      "email",
      "sms",
    ],
  },
]
`;
